# nu-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: nu.duckdb
docs/: CENTERPIECE.md  DATA_SOURCES.md  FINDINGS.md  MEMO.md
src/nu_monitor/: __init__.py  __main__.py  config.py  db.py
src/nu_monitor/app/: dashboard.py
src/nu_monitor/derive/: metrics.py
src/nu_monitor/ingest/: bcb.py  edgar.py
src/nu_monitor/normalize/: kpi_panel.py  nu_financials.py  schema.py
tests/: test_bcb.py  test_edgar.py  test_kpi_panel.py  test_nu_financials.py  test_peers.py  test_schema.py
tests/fixtures/: nu_q1_2026_newfmt.htm
