[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nu-monitor"
version = "0.1.0"
description = "Brazil-first comparative fundamentals & signal monitor for Nu Holdings (NU) and digital-banking peers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pandas>=2.2",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
nu-monitor = "nu_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
